extractor updates + haven ui

--- a/Haven-UI/index.html
+++ b/Haven-UI/index.html
@@ -6,6 +6,20 @@
     <title>Haven Control Room - Web UI</title>
     <link rel="manifest" href="/haven-ui/manifest.webmanifest">
     <meta name="theme-color" content="#00C2B3">
+
+    <!-- Open Graph Meta Tags for Discord/Social Embeds -->
+    <meta property="og:title" content="Haven Control Room">
+    <meta property="og:description" content="No Man's Sky discovery management system. Track systems, planets, and civilizations across the galaxy.">
+    <meta property="og:image" content="https://voyagers-haven-3dmap.ngrok.io/haven-ui/assets/haven-preview.png">
+    <meta property="og:url" content="https://voyagers-haven-3dmap.ngrok.io/haven-ui/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Haven Control Room">
+
+    <!-- Twitter Card (Discord also uses this) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Haven Control Room">
+    <meta name="twitter:description" content="No Man's Sky discovery management system. Track systems, planets, and civilizations across the galaxy.">
+    <meta name="twitter:image" content="https://voyagers-haven-3dmap.ngrok.io/haven-ui/assets/haven-preview.png">
     <!-- Prevent aggressive caching of HTML -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
